Updates due to Azure portal interface changes

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -13,21 +13,20 @@
 
 4. On the **Active Directory Enterprise** blade, specify the following and click **Create**:
 
-
   - Organization name: **Adatum**
 
   - Initial domain name: _a unique, valid name_
 
   - Country or region: **United States**
 
-5. Leave Internet Explorer open and wait until the Azure Active Directory tentant is provisioned.
+5. Leave Internet Explorer open and wait until the Azure Active Directory tentant is provisioned. Note the unique name you specified, since you will need it later in this task.
 
 
 #### Task 2: Activate Azure AD Premium trial
   
 1. In Internet Explorer, click your name in the upper right corner of the Azure portal and, in the drop-down menu, click the name of the Azure Active Directory tenant you created in the previous task.
 
-2. in the hub menu on the left hand side, click the **Azure Active Directory** icon. You might need to expand the hub menu to see the labels of the icons. This should automatically display the **adatum** Azure Active Directory tenant blade.
+2. In the hub menu on the left hand side, click the **Azure Active Directory** icon. You might need to expand the hub menu to see the labels of the icons. This should automatically display the **adatum** Azure Active Directory tenant blade.
 
 3. Click **Quick Start**.
 
@@ -40,92 +39,75 @@
 7. Click the notification area to verify that the Azure AD Premium trial was successfully activated.
 
 
-#### Task 3: Manage users by using the Azure classic portal
+#### Task 3: Manage users by using the Azure portal
   
-1. On the **active directory** page, click **Adatum**.
+1. In the hub menu on the left hand side, click the **Azure Active Directory** icon. You might need to expand the hub menu to see the labels of the icons. This should automatically display the **adatum** Azure Active Directory tenant blade.
 
-2. On the **adatum** page, click **USERS**.
+2. On the **adatum** blade, click **Users and groups**.
 
-3. Click the **ADD USER** button at the bottom of the page.
+3. Click **All users**.
 
-4. In the **Tell us about this user** dialog box, enter the following settings, and then click **Next**:
+4. Click **+ New user**
 
+5. On the **User** blade, specify the following settings:
 
-  - TYPE OF USER: **New user in your organization**
+  - Name: **Remi Desforges**
+  
+  - User name: **rdesforges@_unique-domain-name_.onmicrosoft.com**
 
-  - USER NAME: **rdesforges**
+where **_unique-domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise.
 
+6. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
 
-5. In the **user profile** dialog box, enter the following settings, and then click **Next**:
+  - First Name: **Remi**
+  
+  - Last Name: **Desforges**
 
+7. Accept the default **Properties**, **Groups** and **Directory role** settings, click the **Show Password** checkbox and note the temporary password.
 
-  - FIRST NAME: **Remi**
+8. Click **Create**.
 
-  - LAST NAME: **Desforges**
+9. Click **+ New user**
 
-  - DISPLAY NAME: **Remi Desforges**
+5. On the **User** blade, specify the following settings:
 
-  - ROLE: **User**
+  - Name: **Karen Gruber**
+  
+  - User name: **kgruber@_unique-domain-name_.onmicrosoft.com**
 
-  - Enable Multi-Factor Authentication: _Do not select_
+where **_unique-domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise.
 
+6. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
 
-6. Click **create**.
+  - First Name: **Karen**
+  
+  - Last Name: **Gruber**
 
-7. On the **Get temporary password** page, note the full user name (including the full domain name after the **@** character) and the new password.
+7. Accept the default **Properties** and **Groups** settings and click **Directory role**.
 
-8. Click **Complete** (check mark).
+8. On the **Directory role** blade, click **Global administrator** and click **OK**.
 
-9. Click **ADD USER**.
+9. Click the **Show Password** checkbox and note the temporary password.
 
-10. In the **Tell us about this user** dialog box, enter the following settings, and then click **Next**:
+10. Click **Create**.
 
+11. Start an in-private Internet Explorer session and browse to the Azure portal at **http://portal.azure.com**.
 
-  - TYPE OF USER: **New user in your organization**
+12. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
 
-  - USER NAME: **kgruber**
+13. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
 
+14. If prompted to start Microsoft Azure tour, click **Maybe later**. Next, click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
 
-11. In the **user profile** dialog box, enter the following settings, and then click **Next**:
+15. Close the in-private Internet Explorer session.
 
+16. Start an in-private Internet Explorer session and browse to the Azure portal at **http://manage.windowsazure.com**.
 
-  - FIRST NAME: **Karen**
+17. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password. 
 
-  - LAST NAME: **Gruber**
+18. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and**Confirm password** boxes, type**Pa55w.rd**, and click **Update password and sign in**.
 
-  - DISPLAY NAME: **Karen Gruber**
-
-  - ROLE: **Global Admin**
-
-  - ALTERNATE EMAIL ADDRESS: _Type the email address of the Microsoft account you used to sign in to the Azure classic portal_.
-
-  - Enable Multi-Factor Authentication: _Do not select_
-
-
-12. Click **Create**.
-
-13. On the **Get temporary password** page, note the full user name (including the full domain name after the **@** character) and the new password.
-
-14. Click **Complete** (check mark).
-
-15. Start an in-private Internet Explorer session and browse to the Azure portal at **http://portal.azure.com**.
-
-16. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
-
-17. On the **Update your password** page, in the **Current password** box, type again the temporary password. In the **New password** and **Confirm password** text boxes, type **Pa55w.rd**, and click **Update password and sign in**.
-
-18. Click the user name in the upper-right corner and, in the drop-down menu, click **Sign out**
-
-19. Close the in-private Internet Explorer session.
-
-20. Start an in-private Internet Explorer session and browse to the Azure portal at **http://manage.windowsazure.com**.
-
-21. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password. 
-
-22. On the **Update your password** page, in the **Current password** box, type the temporary password. In the **New password** and**Confirm password** boxes, type**Pa55w.rd**, and click **Update password and sign in**.
-
-23. Close the in-private session of Internet Explorer.
-
+19. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Internet Explorer.
 
 
 #### Task 4: Manage groups by using the Azure classic portal
