Update due to Azure portal interface changes

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -110,25 +110,41 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 19. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Internet Explorer.
 
 
-#### Task 4: Manage groups by using the Azure classic portal
+#### Task 4: Manage groups by using the Azure portal
 
-1. In the Azure classic portal, navigate to the **adatum** Azure AD page.
+1. In the Azure portal, navigate to the **adatum** blade.
 
-2. On the **adatum** page, click **LICENSES**.
+2. On the **adatum** blade, click **Users and groups**.
 
-3. Click **Azure Active Directory Premium P2**
+3. Click **All users**.
 
-4. Click **Assign users**
+4. Click your user account that is the Service Administrator of your subscription.
 
-5. In the **Show** drop-down list, click **All users** and click the check mark on the right-hand side.
+5. Click **Profile**.
 
-6. In the list of users, click the entry representing your user account and click **ASSIGN**.
+6. In the **Usage location** drop down list, select your location and click **Save**.
 
-7. Click **OK**
+7. Navigate back to the **adatum** blade, click **Licenses**.
 
-8. Click large left-pointing arrow in the upper left corner.
+8. In the **Essentials** section, click **1 product**.
 
-9. On the **adatum** page, click **CONFIGURE**.
+9. On the **Products** blade, select the **Azure Active Directory Premium P2** checkbox and click **+ Assign**
+
+10. On the **Assign license** blade, click **Users and groups**.
+
+11. On the **Users and groups** blade, in the **Select** text box, type the name of your user account, ensure that the account name appears underneath the text box, click the account name, and then click **Select**.
+
+12. Click **Assignment options**.
+
+13. On the **License options** blade, verify that **Azure Active Directory Premium P2**, **Azure Active Directory Premium Plan 1**, and **Azure Multi-Factor Authentication** are set to **On** and click **OK**.  
+
+14. Click **Assign**.
+
+15. Verify that the assignment completed successfully. 
+
+16. Navigate back to the **adatum** blade and click **Users and groups**.
+
+
 
 10. Scroll down and in the **group management** section, turn on the **DELEGATED GROUP MANAGEMENT ENABLED** setting by selecting **YES**
 
