Updates due to Azure portal Azure AD changes

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -144,80 +144,69 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 16. Navigate back to the **adatum** blade and click **Users and groups**.
 
+17. On the **General** blade, specify the following settings and click **Save**:
 
+  - Self-service group management enabled: **Yes**.
+  
+  - Users can create security groups: **Yes**
 
-10. Scroll down and in the **group management** section, turn on the **DELEGATED GROUP MANAGEMENT ENABLED** setting by selecting **YES**
+18. Back on the **Users and Groups** blade, click **All groups**.
 
-11. Click **SAVE** in the command bar at the bottom of the page.
+19. Click **+ New group**.
 
-12. Click **GROUPS**.
+20. On the **Group** blade, specify the following settings:
 
-13. Click **ADD GROUP** in the command bar at the bottom of the page.
+  - Name: **Sales**
 
-14. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
+  - Description: **Sales employees**
+  
+  - Membership type: **Assigned**
 
+  - Enable Office features?: **No**
 
-  - NAME: **Sales**
+21. Click **Members**.
 
-  - GROUP TYPE: **Security**
+22. On the **Members** blade, in the **Select** text box, type **Remi Desforges** and, once the user entry appears below the text box, select it and click **Select**. 
 
-  - DESCRIPTION: **Sales employees**
+23. Click **Create** and close the **Group** blade.
 
+24. Scroll back to the **Users and groups - All groups** blade and click **+ New group**.
 
-15. Click **Sales**.
+25 On the **Group** blade, specify the following settings:
 
-16. Click **ADD MEMBERS**.
+  - Name: **Marketing**
 
-17. On the **Add members** page, click **Remi Desforges**, and click **Complete**.
+  - Description: **Marketing employees**
+  
+  - Membership type: **Assigned**
 
-18. Click the **Back** button.
+  - Enable Office features?: **No**
 
-19. Click **ADD GROUP**.
+26. Click **Members**.
 
-20. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
+27. On the **Members** blade, in the **Select** text box, type **Karen Gruber** and, once the user entry appears below the text box, select it and click **Select**. 
 
+28. Click **Create** and close the **Group** blade.
 
-  - NAME: **Marketing**
+29. Scroll back to the **Users and groups - All groups** blade and click **+ New group**.
 
-  - GROUP TYPE: **Security**
+30 On the **Group** blade, specify the following settings:
 
-  - DESCRIPTION: **Marketing employees**
+  - Name: **Sales and Marketing**
 
+  - Description: **Sales and Marketing employees**
+  
+  - Membership type: **Assigned**
 
-21. Click **Marketing**.
+  - Enable Office features?: **No**
 
-22. Click **ADD MEMBERS**.
+31. Click **Members**.
 
-23. On the **Add members** page, click **Karen Gruber**, and click **Complete** (check mark).
+32. On the **Members** blade, in the **Select** text box, type **Sales** and, once the group entry appears below the text box, select it and click **Select**.
 
-24. Click the **Back** button.
+33. On the **Members** blade, in the **Select** text box, type **Marketing** and, once the group entry appears below the text box, select it and click **Select**.
 
-25. Click **ADD GROUP**.
-
-26. In the **Add Group** dialog box, enter the following settings, and then click **Complete**:
-
-
-  - NAME: **Sales and Marketing**
-
-  - GROUP TYPE: **Security**
-
-  - DESCRIPTION: **Sales and Marketing employees**
-
-
-27. Click **Sales and Marketing**.
-
-28. Click **ADD MEMBERS**.
-
-29. On the **Add members** page, in the **SHOW** drop-down box, click **Groups**, and click the **Confirm** button to the right of the **SHOW** drop-down box.
-
-30. Click **Marketing**.
-
-31. Click **Sales**.
-
-32. Click **Complete** (check mark).
-
-33. Click the **Back** button.
-
+34. Click **Create** and close the **Group** blade.
 
 
 #### Task 5: Manage users and groups by using Azure PowerShell
