Update due to Azure portal interface changes

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -293,11 +293,11 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 23. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-24. Switch to the **adatum** page of the Azure classic portal in Internet Explorer and refresh the page.
+24. Switch to the **adatum** blade of the Azure  portal in Internet Explorer and refresh the page.
 
-25. Click **USERS**, and verify that **Mario Ledford** appears in the list of users.
+25. Click **All users**, and verify that **Mario Ledford** appears in the list of users.
 
-26. Click **GROUPS**, and verify that **Azure team** appears in the list of groups.
+26. Click **All groups**, and verify that **Azure team** appears in the list of groups.
 
 
 > **Result**: After completing this exercise, you should have created Azure AD users and groups by using the Azure portal and Microsoft Azure Active Directory Module for Windows PowerShell. You also should have enabled the delegated group management Azure AD Premium functionality.
@@ -307,51 +307,57 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
   
 #### Task 1: Add directory applications and configure SSO
   
-1. On the **adatum** page in the Azure classic portal, click **APPLICATIONS**.
+1. Navigate to the **adatum** page in the Azure portal, click **Enterprise applications**.
 
-2. Click **ADD**.
+2. Click **New application**.
 
-3. In the **What do you want to do?** dialog box, click **Add an application from the gallery**.
+3. On the **Categories** blade, click the top entry in the list of categories that includes all applications.
 
-4. In the **Add an application for my organization to use** dialog box, in the search box, type **Microsoft**, and then press Enter.
+4. On the **Add an application** blade, in the search box, type **Microsoft**.
 
-5. Click **Microsoft Account (Windows Live)**, in the **Display** Name text box, type **Microsoft Account**, and then click the check mark.
+5. Click **Microsoft Account (Windows Live)** and click **Add**. Wait till the application gets added.
 
-6. Verify that **Configure single sign-on** is enabled by default.
+6. On the **Microsoft Account (Windows Live) - Quick start** blade, click **Configure single sign-on (required)**. 
 
-7. Click **Assign accounts**.
+7. On the **Single sign-on** blade, in the **Mode** drop-down list, select **Pasword-based Sign-on** and click **Save**. 
 
-8. From the **SHOW** drop-down menu, select **All Users**, and then click the check mark. In the user list, click **Mario Ledford**.
+8. Click **Assign a user for testing (required)**.
 
-9. At the bottom of the screen, click **ASSIGN**.
+9. On the **Users and groups** blade, click **+ Add user**.
 
-10. In the **Assign Users** dialog box, select **I want to enter Microsoft Account credentials on behalf of the user**.
+10. On the **Add assignment** blade, click **Users and groups**. 
 
-11. In the **Email Address** box, type the name of your Microsoft Account you are using for this lab. In the **Password** box, type the corresponding password, and then click the check mark.
+11. On the **Users and groups** blade, type **Mario Ledford**.
 
-12. Above Microsoft account, click the **Back** arrow.
+12. Select the entry representing the Mario Ledford user account and click **Select**.
 
-13. At the bottom of the screen, click **ADD**.
+13. Click **Assign**.
 
-14. In the **What do you want to do?** dialog box, click **Add an application from the gallery**.
+14. On the **Users and groups** blade, click **Mario Ledford** and then click **Update Credentials**.
 
-15. In the **Add an application for my organization to use** dialog box, in the search box, type **Skype**, and then press Enter.
+15. On the **Update Credentials** blade, in the **Email Address** box, type the name of your Microsoft Account you are using for this lab. In the **Password** box, type the corresponding password, and then click **Save**.
 
-16. Click **Skype**, in the **Display Name** text box, type **Skype**, and then click the check mark.
+16. Scroll back to the **Add an application** blade, in the search box, type **Skype**.
 
-17. Verify that **Configure single sign-on** is enabled by default.
+17. Click **Skype** and click **Add**. Wait till the application gets added.
 
-18. Click **Assign accounts**.
+18. On the **Skype - Quick start** blade, click **Configure single sign-on (required)**. 
 
-19. From the **SHOW** drop-down menu, select **All Users**, and then click the check mark.
+19. On the **Single sign-on** blade, in the **Mode** drop-down list, select **Pasword-based Sign-on** and click **Save**. 
 
-20. In the user list, click **Mario Ledford**.
+20. Click **Assign a user for testing (required)**.
 
-21. At the bottom of the screen, click **ASSIGN**.
+21. On the **Users and groups** blade, click **+ Add user**.
 
-22. In the **Assign Users** dialog box, ensure that the **I want to enter Skype credentials on behalf of the user** checkbox is cleared and then click the check mark.
+22. On the **Add assignment** blade, click **Users and groups**. 
 
-23. On the top right side of the page, click your Azure account name, and then click **Sign out**.
+23. On the **Users and groups** blade, type **Mario Ledford**.
+
+24. Select the entry representing the Mario Ledford user account and click **Select**.
+
+25. Click **Assign**.
+
+26. On the top right side of the page, click your Azure account name, and then click **Sign out**.
 
 
 #### Task 2: Configure SSO on a client computer
