The Azure portal updates

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -412,13 +412,15 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
   
 #### Task 1: Configure Multi-Factor Authentication
   
-1. Start Internet Explorer, browse to the Azure classic portal at **http://manage.windowsazure.com**, and then sign in using the Microsoft account that is the Service Administrator of your subscription.
+1. Start Internet Explorer, browse to the Azure  portal at **http://portal.azure.com**, and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-2. In the navigation bar, scroll down, and click **ACTIVE DIRECTORY**.
+2. In the hub menu, click **More services** and then, in the list of services, click **Azure Active Directory**.
 
-3. Click the right arrow next to the **Adatum** directory.
+3. On the **adatum** blade, click **Users and groups**.
 
-4. Click **CONFIGURE**.
+4. Click **All users**.
+
+5. Click **Multi-Factor Authentication**. This will open another Internet Explorer tab.
 
 5. In the **multi-factor authentication** section, click **Manage service settings**.
 
