Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -19,7 +19,7 @@
 
   - Country or region: **United States**
 
-5. Leave Internet Explorer open and wait until the Azure Active Directory tentant is provisioned. Note the unique name you specified, since you will need it later in this task.
+5. Leave Internet Explorer open and wait until the Azure Active Directory tentant is provisioned. Note the unique name you specified, since you will need it later in this task
 
 
 #### Task 2: Activate Azure AD Premium trial
