Azure portal interface updates

--- a/Instructions/20533C_LAB_09.md
+++ b/Instructions/20533C_LAB_09.md
@@ -70,109 +70,92 @@ The main tasks for this exercise are as follows:
 
   - Country or region: **United States**
 
-4. Close Internet Explorer.
+4. Leave Internet Explorer open.
 
 
 #### Task 2: Activate Azure AD Premium trial
   
-1. Start Internet Explorer, browse to the Azure classic portal. In the navigation pane, select the **Adatum** directory.
+1. In the Azure portal, navigate to the **Adatum** directory.
 
-2. From the **LICENSES** tab, enable Azure AD Premium trial.
+2. Activate the Azure AD Premium trial.
 
 
 
-#### Task 3: Manage users by using the Azure classic portal
+#### Task 3: Manage users by using the Azure portal
   
 1. Create a user in the Adatum directory with the following settings:
 
+  - Name: **Remi Desforges**
+  
+  - User name: **rdesforges@_unique-domain-name_.onmicrosoft.com** where **_unique-domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise
 
-  - TYPE OF USER: **New user in your organization**
-
-  - USER NAME: **rdesforges**
-
-  - FIRST NAME: **Remi**
-
-  - LAST NAME: **Desforges**
-
-  - DISPLAY NAME: **Remi Desforges**
-
-  - ROLE: **User**
-
-  - Enable Multi-Factor Authentication: _Do not select_
-
+  - First Name: **Remi**
+  
+  - Last Name: **Desforges**
 
 2. Note the new password.
 
 3. Create another user in the Adatum directory with the following settings:
 
+  - Name: **Karen Gruber**
 
-  - TYPE OF USER: **New user in your organization**
+  - User name: **rdesforges@_unique-domain-name_.onmicrosoft.com** where **_unique-domain-name_** is the name you assigned to the Azure Active Directory tenant in the first task of this exercise
 
-  - USER NAME: **kgruber**
+  - First Name: **Karen**
+  
+  - Last Name: **Gruber**
 
-  - FIRST NAME: **Karen**
-
-  - LAST NAME: **Gruber**
-
-  - DISPLAY NAME: **Karen Gruber**
-
-  - ROLE: **Global Admin**
-
-  - ALTERNATE EMAIL ADDRESS: _Type the email address of the Microsoft account you used to sign in to the Azure classic portal_.
-
-  - Enable Multi-Factor Authentication: _Do not select_
-
+  - Directory role: **Global administrator**
+    
 4. Note the new password.
 
 5. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
 
-6. Open an InPrivate Internet Explorer window, navigate to the Azure portal, sign in as Karen Gruber, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
+6. Open an InPrivate Internet Explorer window, navigate to the Azure classic portal, sign in as Karen Gruber, when prompted, change the password to **Pa55w.rd** and then sign-out and close the InPrivate Internet Explorer window. 
 
+7. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Internet Explorer.
 
 #### Task 4: Manage groups by using the Azure portal
   
-1. From the Azure classic portal, assign an Azure Active Directory Premium P2 license to **Karen Gruber**.
+1. From the Azure portal, assign an Azure Active Directory Premium P2 license to your user account in the **Adatum** Azure AD.
 
-2. In the Azure classic portal, navigate to the **CONFIGURE** page of the **adatum** Azure AD tenant.
+2. From the Azure portal, enable self-service group management and allow users to create security groups.
 
-3. From the **CONFIGURE** tab, switch the **Delegated Group Management Enabled** setting to **YES**.
+3. Create the following group in the Adatum directory:
 
-4. Create the following group in the Adatum directory:
+  - Name: **Sales**
 
+  - Description: **Sales employees**
+  
+  - Membership type: **Assigned**
 
-  - NAME: **Sales**
-
-  - GROUP TYPE: **Security**
-
-  - DESCRIPTION: **Sales employees**
-
-
+  - Enable Office features?: **No**
+  
 5. Add **Remi Desforges** to the **Sales** group.
 
 6. Create the following group in the Adatum directory:
 
+  - Name: **Marketing**
 
-  - NAME: **Marketing**
+  - Description: **Marketing employees**
+  
+  - Membership type: **Assigned**
 
-  - GROUP TYPE: **Security**
-
-  - DESCRIPTION: **Marketing employees**
-
+  - Enable Office features?: **No**
 
 7. Add **Karen Gruber** to the **Marketing** group.
 
 8. Create the following group in the Adatum directory:
 
+  - Name: **Sales and Marketing**
 
-  - NAME: **Sales and Marketing**
+  - Description: **Sales and Marketing employees**
+  
+  - Membership type: **Assigned**
 
-  - GROUP TYPE: **Security**
-
-  - DESCRIPTION: **Sales and Marketing employees**
-
+  - Enable Office features?: **No**
 
 9. Add the **Sales** and **Marketing** groups to the **Sales and Marketing** group.
-
 
 
 #### Task 5: Manage users and groups by using Azure PowerShell
@@ -247,11 +230,11 @@ The main tasks for this exercise are as follows:
 
 17. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
-18. Switch to Internet Explorer displaying the Azure classic portal.
+18. Switch to Internet Explorer displaying the Azure  portal.
 
-19. From the **adatum** page, verify that **Mario Ledford** appears in the list of users.
+19. From the **adatum** blade, verify that **Mario Ledford** appears in the list of users.
 
-20. From the **adatum** page, verify that **Azure team** appears in the list of groups.
+20. From the **adatum** blade, verify that **Azure team** appears in the list of groups.
 
 
 > **Result**: After completing this exercise, you should have created some pilot users and groups in Azure AD by using the Azure portal and Microsoft Azure Active Directory Module for Windows PowerShell. You will also enable the Azure AD Premium functionality.
@@ -275,7 +258,7 @@ The main tasks for this exercise are as follows:
   
 1. In the **Adatum** directory, add the **Microsoft Account (Windows Live)** application from the gallery:
 
-2. Verify that **Configure single sign-on** is enabled by default.
+2. Configure single sign-on for the application with the **Pasword-based Sign-on** setting.
 
 3. Assign the application to **Mario Ledford**.
 
@@ -285,12 +268,9 @@ The main tasks for this exercise are as follows:
 
 6. In the **Adatum** directory, add the **Skype** application from the gallery:
 
-7. Verify that **Configure single sign-on** is enabled by default.
+7. Configure single sign-on for the application with the **Pasword-based Sign-on** setting.
 
 8. Assign the application to **Mario Ledford**
-
-9. In the **Assign User** dialog box, do not enter the Microsoft Account credentials on behalf of the user.
-
 
 
 #### Task 2: Test SSO
