Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -59,9 +59,9 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 6. Click **Profile** and, on the **Profile** blade, specify the following settings and click **OK**:
 
-  - First Name: **Remi**
-  
-  - Last Name: **Desforges**
+    - First Name: **Remi**
+
+    - Last Name: **Desforges**
 
 7. Accept the default **Properties**, **Groups** and **Directory role** settings, click the **Show Password** checkbox and note the temporary password.
 
@@ -101,7 +101,7 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 15. Close the in-private Internet Explorer session.
 
-16. Start an in-private Internet Explorer session and browse to the Azure portal at **http://manage.windowsazure.com**.
+16. Start an in-private Internet Explorer session and browse to the Azure classic portal at **http://manage.windowsazure.com**.
 
 17. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password. 
 
