Ex1 Task1 Step6 minor fix

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -21,7 +21,7 @@
 
   - Subscription: **_The Azure subscription you intend to use for this lab_**.
 
-  - Resource group name: click **Create new** and then click **20533C0401-LabRG**
+  - Resource group name: click **Create new** and then type **20533C0401-LabRG**.
 
   - Location: **_The Azure region closest to the location of your lab computer_**.
 
