Removed Ex1 Task1 Step21 due to GUI changes

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -88,11 +88,9 @@
 
 19. On the **New** blade, click **Compute**.
 
-20. On the **Compute** blade, click **Windows Server 2016 Datacenter**.
+20. On the **Compute** blade, click **Windows Server 2016 Datacenter**. The **Create virtual machine** blade appears and expands its **Basics** blade.
 
-21. On the **Windows Server 2016 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The **Create virtual machine** blade appears and expands its **Basics** blade.
-
-22. On the **Basics** blade, specify the following:
+21. On the **Basics** blade, specify the following:
 
   - Name: **ResDevWebVM2**
 
@@ -108,11 +106,11 @@
 
   - Location: **_The same location you chose for the availability set_**.
 
-23. Click **OK**. The **Choose a size** blade automatically appears.
+22. Click **OK**. The **Choose a size** blade automatically appears.
 
-24. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
+23. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
 
-25. On the **Settings** blade, specify the following settings:
+24. On the **Settings** blade, specify the following settings:
 
   - Use managed disks: **No**
 
@@ -130,19 +128,19 @@
 
   - Guest OS diagnostics: **Disabled**
 
-26. Click **OK**. The **Summary** blade automatically appears.
+25. Click **OK**. The **Summary** blade automatically appears.
 
-27. On the **Summary** blade, click **OK**.
+26. On the **Summary** blade, click **OK**.
 
-28. In the Azure portal, in the **Hub** menu, click **More services**.
+27. In the Azure portal, in the **Hub** menu, click **More services**.
 
-29. In the list of services, click **Availability sets**. 
+28. In the list of services, click **Availability sets**. 
 
-30. On the **Availability sets** blade, click **ResDevWebAS**.
+29. On the **Availability sets** blade, click **ResDevWebAS**.
 
-31. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Note that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
+30. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Note that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
 
-32. Leave the Internet Explorer window with the Azure portal open.
+31. Leave the Internet Explorer window with the Azure portal open.
 
 
 
