Added group settings
Added group settings to the user and group instructions

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -144,17 +144,19 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
 16. Navigate back to the **adatum** blade and click **Users and groups**.
 
-17. On the **General** blade, specify the following settings and click **Save**:
+17. Click **Group settings**.
+
+18. On the **General** blade, specify the following settings and click **Save**:
 
   - Self-service group management enabled: **Yes**.
   
   - Users can create security groups: **Yes**
 
-18. Back on the **Users and Groups** blade, click **All groups**.
+19. Back on the **Users and Groups** blade, click **All groups**.
 
-19. Click **+ New group**.
+20. Click **+ New group**.
 
-20. On the **Group** blade, specify the following settings:
+21. On the **Group** blade, specify the following settings:
 
   - Name: **Sales**
 
@@ -164,15 +166,15 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
   - Enable Office features?: **No**
 
-21. Click **Members**.
+22. Click **Members**.
 
-22. On the **Members** blade, in the **Select** text box, type **Remi Desforges** and, once the user entry appears below the text box, select it and click **Select**. 
+23. On the **Members** blade, in the **Select** text box, type **Remi Desforges** and, once the user entry appears below the text box, select it and click **Select**. 
 
-23. Click **Create** and close the **Group** blade.
+24. Click **Create** and close the **Group** blade.
 
-24. Scroll back to the **Users and groups - All groups** blade and click **+ New group**.
+25. Scroll back to the **Users and groups - All groups** blade and click **+ New group**.
 
-25 On the **Group** blade, specify the following settings:
+26. On the **Group** blade, specify the following settings:
 
   - Name: **Marketing**
 
@@ -182,15 +184,15 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
   - Enable Office features?: **No**
 
-26. Click **Members**.
+27. Click **Members**.
 
-27. On the **Members** blade, in the **Select** text box, type **Karen Gruber** and, once the user entry appears below the text box, select it and click **Select**. 
+28. On the **Members** blade, in the **Select** text box, type **Karen Gruber** and, once the user entry appears below the text box, select it and click **Select**. 
 
-28. Click **Create** and close the **Group** blade.
+29. Click **Create** and close the **Group** blade.
 
-29. Scroll back to the **Users and groups - All groups** blade and click **+ New group**.
+30. Scroll back to the **Users and groups - All groups** blade and click **+ New group**.
 
-30 On the **Group** blade, specify the following settings:
+31. On the **Group** blade, specify the following settings:
 
   - Name: **Sales and Marketing**
 
@@ -200,11 +202,11 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
 
   - Enable Office features?: **No**
 
-31. Click **Members**.
+32. Click **Members**.
 
-32. On the **Members** blade, in the **Select** text box, type **Sales** and, once the group entry appears below the text box, select it and click **Select**.
+33. On the **Members** blade, in the **Select** text box, type **Sales** and, once the group entry appears below the text box, select it and click **Select**.
 
-33. On the **Members** blade, in the **Select** text box, type **Marketing** and, once the group entry appears below the text box, select it and click **Select**.
+34. On the **Members** blade, in the **Select** text box, type **Marketing** and, once the group entry appears below the text box, select it and click **Select**.
 
 34. Click **Create** and close the **Group** blade.
 
@@ -235,7 +237,7 @@ where **_unique-domain-name_** is the name you assigned to the Azure Active Dire
   New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd' -ForceChangePassword $false -UsageLocation 'US'
   ```
 
-9. Replace **&lt;#Copy your Azure Directory domain name here#&gt;** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant
+9. Replace **<#Copy your Azure Directory domain name here#>** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant
 
 10. In the PowerShell ISE window, in the script pane, select the code that you just edited.
 
