Download link are removed from the portal
The download link of Azure AD Connect blade are removed. So students must be go to https://www.microsoft.com/en-us/download/details.aspx?id=47594

--- a/Instructions/20533C_LAB_10.md
+++ b/Instructions/20533C_LAB_10.md
@@ -104,7 +104,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1. From the RDP session to adVM, switch to the Internet Explorer session with the Azure portal. Download Azure AD Connect from from the Azure Active Directory blade in the Azure portal to the **Downloads** folder.
+1. From the RDP session to adVM, switch to the Internet Explorer. Download Azure AD Connect from https://www.microsoft.com/en-us/download/details.aspx?id=47594 to the **Downloads** folder.
 
 2. Install the Azure AD Connect tool, select custom settings, and then ensure that **Password Synchronization** is selected.
 
