Download link are removed from the portal
The download link of Azure AD Connect blade are removed. So students must be go to https://www.microsoft.com/en-us/download/details.aspx?id=47594

--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -117,9 +117,9 @@
 
 #### Task 3: Install Azure AD Connect with custom settings
   
-1. Switch to the Internet Explorer window containing the Azure portal. In the **AdatumSync** Azure Active Directory blade, click **Azure AD Connect**. 
+1. From the RDP session to adVM, switch to the Internet Explorer. 
 
-2. On the **AdatumSync - Azure AD Connect** blade, click **Download Azure AD Connect**. On The Microsoft **Azure Active Directory Connect** page, click **Download**.
+2. Download Azure AD Connect from https://www.microsoft.com/en-us/download/details.aspx?id=47594.
 
 3. In the pop-up window, click **Save**.
 
